tests/baselines/reference/parserInterfaceDeclaration2.errors.txt
//// [tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts] ////

parserInterfaceDeclaration2.ts(1,13): error TS1176: Interface declaration cannot have 'implements' clause.


==== parserInterfaceDeclaration2.ts (1 errors) ====
    interface I implements A {
                ~~~~~~~~~~
!!! error TS1176: Interface declaration cannot have 'implements' clause.
    }